Fix some overlap issues on mobile
[Fixes #149941577](https://www.pivotaltracker.com/story/show/149941577)

--- a/src/components/views/MainView.css
+++ b/src/components/views/MainView.css
@@ -33,6 +33,11 @@
   .isProfileMenuActive ~ .MainView {
     display: none;
   }
+
+  .isLoggedOut .ArtistInvites.MainView,
+  .isLoggedOut .Editorial.MainView {
+    margin-top: 20px;
+  }
 }
 
 @media (--break-2) {
